--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Receita Cookies</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.png" alt="logo">
-            <h1> RECEITAS ISA</h1>
+            <img src="img/logo.png" alt="logo">
+            <h1>Receitinhas Isa</h1>
         </header>
         <nav>
             <ul>
