tentando mexer nos ingredientes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Receitinhas Isa</h1>
         </header>
         <nav>
-            <ul>
+            <ul class="container">
                 <li>Inicio</li>
                 <li>Ingredientes</li>
                 <li>Utensílios</li>
@@ -24,9 +24,9 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <section class="ingredientes">
                 <h2>Igredientes</h2>
-                <ul>
+                <ul class="ingredientes">
                     <li class="ingre">200g de manteiga</li>
                     <li class="ingre">1 xícara de açúcar mascavo</li>
                     <li class="ingre">1/2 xícara de açúcar refinado</li>
@@ -37,6 +37,7 @@
                     <li class="ingre">1 pitada de sal</li>
                     <li class="ingre">200g de chocolate em gotas (ou picado)</li>
                 </ul>
+                <img src="img/cookies.png" alt="foto-cookie" class="cookie">
             </section>
             <section>
                 <h2>Utensílios</h2>
